# tauri-plugin-penetrable

./: Cargo.toml  build.rs
permissions/: default.toml
permissions/autogenerated/: reference.md
permissions/autogenerated/commands/: disable_penetrable.toml  enable_penetrable.toml
permissions/schemas/: schema.json
src/: commands.rs  lib.rs
src/com/: windows.rs
